--- a/prologin/gcc/templates/gcc/editions/index.html
+++ b/prologin/gcc/templates/gcc/editions/index.html
@@ -18,8 +18,8 @@
         <div class="description">
             <p>
                 {% blocktrans %}
-                This year, the organization of a Girls Can Code! at <strong>Nantes</strong> was delegated to the organization Adn-ouest Atlantic 2020. Meanwhile, Prologin  organizes the summer camps at <strong>Paris</strong> and <strong>Lyon</strong>.<br />
-                Those summer camps had a total of <strong>70 girls</strong> and a new practice on <strong>microcontrolers microbit</strong> is created. With the video games tutorial and some activities with the Lego robots it's a great way to practice the skils learned during the week with creativity and fun !
+                This year, the organization of a Girls Can Code! at <strong>Nantes</strong> was delegated to the organization ADN-ouest Atlantic 2020. Meanwhile, Prologin  organizes the summer camps at <strong>Paris</strong> and <strong>Lyon</strong>.<br />
+                Those summer camps had a total of <strong>70 girls</strong> and a new practice on <strong>microcontroller microbit</strong> is created. With the video games tutorial and some activities with the Lego robots it's a great way to practice the skills learned during the week with creativity and fun !
                 {% endblocktrans %}
             </p>
             <div class="carousel">
@@ -106,7 +106,7 @@
                 {% blocktrans %}
                 This first summer camp hosted <strong>10 participants</strong> for 5 days to introduce to them to programming.
                 Center around algorithmic, we learn to use abstract data structures, for example <strong>graphs</strong>.
-                Among all the participants, two in particular contine to study IT and became organizers as well.
+                Among all the participants, two in particular continue to study IT and became organizers as well.
                 {% endblocktrans %}
             </p>
             <div class="carousel">
