--- a/prologin/gcc/templates/gcc/resources.html
+++ b/prologin/gcc/templates/gcc/resources.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <section class="wrapper emph-infos important">
-    <div class="title">Train to code</div>
+    <div class="title">{% trans "Train to code" %}</div>
     <div class="container">
       <p>
         {% blocktrans %}
@@ -17,7 +17,7 @@
 </section>
 
 <section class="wrapper emph-infos">
-  <div class="title">{% trans 'Which language ?' %}</div>
+  <div class="title">{% trans "Which language ?" %}</div>
     <div class="container">
       <p>
         {% blocktrans %}
@@ -36,7 +36,7 @@
 </section>
 
 <section class="wrapper">
-    <div class="title">{% trans 'Starting' %}</div>
+    <div class="title">{% trans "Starting" %}</div>
 
     <div class="container">
       <div class="highlight-row">
